Refactor interface+records
Provide access methods on interfaces, for the data modelled with records