@@ -4,58 +4,30 @@ import java.util.Optional;
 
 public sealed interface Player {
 
-        default String name() {
-            if (this instanceof Anonymous) return "Anonymous";
-            if (this instanceof User u) return u.user().name();
-            if (this instanceof Computer c) return "Stockfish level " + c.aiLevel();
-            return "<unknown user>";
+    default String name() {
+        if (this instanceof Anonymous) return "Anonymous";
+        if (this instanceof Account account) return account.user().name();
+        if (this instanceof AI ai) return "Level " + ai.aiLevel();
+        return "<unknown user>";
+    }
 
-            // --enable-preview
-            //return switch(this) {
-            //    case Anonymous a -> "Anonymous";
-            //    case User u -> u.user().name();
-            //    case Computer c -> "Stockfish level " + c.aiLevel();
-            //};
-        }
+    record AI(int aiLevel)                                           implements Player {}
+    record Anonymous()                                               implements Player {}
+    record Account(UserCommon user, int rating, boolean provisional) implements Player {}
+    record AccountArena(Player account,
+            Optional<Boolean> berserk, Optional<String> team)        implements Player {}
+    record AccountDiff(Player account, int ratingDiff)               implements Player {}
+    record Analyzed(Player player, Analysis analysis)                implements Player {}
 
-        default Optional<Analysis> analysis() {
-            if (this instanceof User u) return u.analysis();
-            if (this instanceof Anonymous a) return a.analysis();
-            return Optional.empty();
-        }
+    sealed interface Analysis {
+        private Base basic() { return this instanceof Accuracy a ? a.analysis() : (Base) this; }
+        default int inaccuracy() { return basic().inaccuracy(); }
+        default int mistake() { return basic().mistake(); }
+        default int blunder() { return basic().blunder(); }
+        default int acpl() { return basic().acpl(); }
+        default Optional<Integer> accuracyOpt() { return this instanceof Accuracy a ? Optional.of(a.accuracy()) : Optional.empty(); }
+    }
 
-        default Optional<Integer> accuracy() {
-            if (this instanceof User u) return u.accuracy();
-            return Optional.empty();
-        }
-
-        record Anonymous(Optional<Analysis> analysis) implements Player {}
-
-        record Computer(Integer aiLevel) implements Player {}
-
-        // Conveninece for accessing the LightUser-methods in User-record
-        // if (player instanceof User u && u.title().equals("GM")) ...
-        interface LUser {
-            String id();
-            String name();
-            String title();
-            boolean patron();
-        }
-
-        record User(
-                LightUser user,
-                Integer rating,
-                Integer ratingDiff,
-                boolean provisional,
-                Optional<Boolean> berserk,
-                Optional<Analysis> analysis,
-                Optional<Integer> accuracy) implements Player, LUser {
-
-            @Override public String id() { return user.id(); }
-            @Override public String name() { return user.name(); }
-            @Override public String title() { return user.title().orElse(""); }
-            @Override public boolean patron() { return user.patron(); }
-        }
-
-        record Analysis(int inaccuracy, int mistake, int blunder, int acpl) {}
+    record Base(int inaccuracy, int mistake, int blunder, int acpl) implements Analysis {}
+    record Accuracy(Base analysis, int accuracy)                    implements Analysis {}
 }
